# btorch

./: .all-contributorsrc  .gitignore  AGENTS.md  README.md  README.zh.md  dev-requirements.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  spikenet_migration_tips.md
.agent/rules/: basic.md
.github/workflows/: build-docs.yml  ci.yml  desloppify.yml  pr_agent.yml  translate-docs.yml
benchmark/: README.md
benchmark/scatter/: test_merged_gather.py  test_merged_scatter.py
benchmark/sparse_rnn/: README.md  profile_sparse_rnn.py
benchmark/spiking_metrics/: bench_spiking_analysis.py
btorch/: __init__.py  config.py  jit.py  types.py
btorch/analysis/: __init__.py  aggregation.py  branching.py  clustering.py  connectivity.py  metrics.py  spiking.py  statistics.py  voltage.py
btorch/connectome/: augment.py  connection.py
btorch/datasets/: __init__.py  noise.py
btorch/io/: __init__.py  serialization.py
btorch/models/: __init__.py  base.py  environ.py  functional.py  init.py  linear.py  regularizer.py  rnn.py  scale.py  synapse.py  test_chemsyn_model0_gate.py
btorch/utils/: __init__.py  bench.py  conf.py  dict_utils.py  file.py  hdf5_utils.py  hex_utils.py  pandas_utils.py  yaml_utils.py
btorch/visualisation/: __init__.py  aggregation.py  braintools_compat.py  dynamics.py  (+5 more)
docs/: analysis.md  conf.py  development.md  gen_ref_pages.py  index.rst  installation.md  language_names.yml  quickstart.rst  requirements.txt
examples/: fmnist.py  fmnist_lightning.py  rsnn.py  rsnn_brain.py
scripts/: docs.py  general-llm-prompt.md  translate.py
(+105 files in other folders)
